--- a/starter/index.html
+++ b/starter/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
     <!-- Add script tag -->
-    <script src="./js/scripts.js" defer></script>
+    <script src="./js/script.js" defer></script>
     <title>My Personal Portfolio</title>
 </head>
 
 <body>
     <header>
-        <h1>Insert your name here</h1>
+        <h1>Veselin Tonev</h1>
         <nav>
             <ul>
                 <a href='#aboutMeContainer'>
